--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^14.0.0
+  google_maps_flutter: ^2.12.1
   http: ^1.3.0
   shared_preferences: ^2.5.3
 
