--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geocoding: ^3.0.0
   geolocator: ^14.0.0
   google_maps_flutter: ^2.12.1
   http: ^1.3.0
