--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   geolocator: ^14.0.0
   google_maps_flutter: ^2.12.1
   http: ^1.3.0
+  intl: ^0.20.2
   shared_preferences: ^2.5.3
 
 dev_dependencies:
