--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  geocoding: ^3.0.0
-  geolocator: ^14.0.0
-  google_maps_flutter: ^2.12.1
+  cupertino_icons: ^1.0.8
+  provider: ^6.1.4
+  flutter_launcher_icons: ^0.14.3
   http: ^1.3.0
-  intl: ^0.20.2
+  geocoding: ^3.0.0
+  geolocator: ^13.0.4
+  google_maps_flutter: ^2.12.1
   shared_preferences: ^2.5.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
